# dots

./: .gitignore  README.md
docs/: AdditionaServicesGenericTypes.md  AuthService.md  BasicComponentDescription.md  CarrierManagementSegment.md  DeliverySegment.md  EventsStructure.md  LocationService.md  README.md  WhatIsDOTS.md  WhyWeShouldUseIntegrationWithDOTS.md
lib/: Cargo.toml
lib/.cargo/: config
lib/src/: lib.rs
lib/src/protocols/: mod.rs  reqrep.rs
