[package]
name = "dots"
version = "0.1.0"
authors = ["Evgeny Ukhanov <mrlsd@ya.ru>"]
description = """
Delivery & Order Tracking System focused on ease-of-use, efficiency, and speed.
"""
repository = "https://github.com/irony-rust/dots"
license = "MIT"

[dependencies]
nanomsg = "0.6.*"
serde = "1.*"
serde_json = "1.*"
serde_derive = "1.*"
log = "0.4.*"
log4rs = "0.8.*"
